# cuervo

./: .gitignore  Cargo.toml  README.md
src/: glue.rs  main.rs
src/strings/: en.ftl  es.ftl  tok.ftl
